--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,13 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+*.csv
+*.dat
+*.out
+*.gz
+results
+npm-debug.log
+.idea
+app-coverage/
+reports/
+app/iisnode/
